package com.adler.apical;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ApiCalApplication {

	public static void main(String[] args) {
		SpringApplication.run(ApiCalApplication.class, args);
	}

}
