package com.adler.apical.domain.repository;

import com.adler.apical.domain.model.Sala;
import org.springframework.data.jpa.repository.JpaRepository;

/**
 *
 * @author adler
 */
public interface SalaRepository extends JpaRepository<Sala, Long>{
    
}
